Latest build deployed.

--- a/.mapping.json
+++ b/.mapping.json
@@ -1,1 +1,1 @@
-{"source/main.ptx": ["calc-prep", "frontmatter"], "source/chapters/chapter-3.xml": ["chapter-testing"]}
+{"source/main.ptx": ["calc-prep", "frontmatter", "backmatter"], "source/chapters/chapter-3.xml": ["chapter-testing"]}
